added two graphs

--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
+    "date-fns": "^2.29.3",
     "firebase": "^9.17.1",
     "framer-motion": "^10.0.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
+    "react-component-export-image": "^1.0.6",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.8.1",
     "recharts": "^2.4.3",
-    "typewriter-effect": "^2.19.0"
+    "typewriter-effect": "^2.19.0",
+    "use-react-screenshot": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
